@@ -1,3 +1,7 @@
+4 May 2004 Sylvain Pion
+- Add dummy symbol in src/Geomview.C to prevent linker warnings of empty
+  object file (ICL).
+
 25 March 2004 Radu Ursu
 - made doc work with the new implementation of the Manual tools
 
